k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-backend
  namespace: petclinic
spec:
  replicas: 2
  selector:
    matchLabels:
      app: petclinic-backend
  template:
    metadata:
      labels:
        app: petclinic-backend
    spec:
      containers:
        - name: petclinic-backend
          image: krusharoska/spring-petclinic-rest:latest
          ports:
            - containerPort: 9966
          readinessProbe:
            httpGet:
              path: /petclinic/actuator/health
              port: 9966
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /petclinic/actuator/health
              port: 9966
            initialDelaySeconds: 60
            periodSeconds: 30
