k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-backend
  namespace: petclinic
spec:
  selector:
    app: petclinic-backend
  type: ClusterIP
  ports:
    - port: 9966
      targetPort: 9966
