k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-frontend
  namespace: petclinic
spec:
  selector:
    app: petclinic-frontend
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
